--- a/CapyCity4_MC/CapyCity4_MC.vcxproj.filters
+++ b/CapyCity4_MC/CapyCity4_MC.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Material.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Blueprint.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CapyCity4_MC.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Material.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Blueprint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
